--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Release
 
 on:  
   schedule:
-    - cron: '30 * * * *'
+    - cron: '45 * * * *'
 jobs:
   Trigger-Package-and-Release-Workflow:
     runs-on: ubuntu-latest
@@ -23,6 +23,8 @@ jobs:
         run: echo "::set-output name=nexttag::$(echo ${{ steps.previoustag.outputs.tag }} | sed -E 's/.\d+$/.${{ steps.date.outputs.date }}/g')"
       - name: Bump Version
         run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
           git tag ${{ steps.nexttag.outputs.nexttag }}
           git commit --allow-empty -m "Bump version"
 
