--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Release
 
 on:  
   schedule:
-    - cron: '30 * * * *'
+    - cron: '5 * * * *'
 jobs:
   Trigger-Package-and-Release-Workflow:
     runs-on: ubuntu-latest
@@ -20,7 +20,7 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y%m%d')"
       - name: Make next tag
         id: nexttag
-        run: echo "::set-output name=nexttag::$(echo '${{ steps.previoustag.outputs.tag }}' | sed -E 's/.\d+\s*$/.${{ steps.date.outputs.date }}/g')"
+        run: echo "::set-output name=nexttag::$(echo '${{ steps.previoustag.outputs.tag }}' | sed -r 's/\.[0-9]+\s*$/.${{ steps.date.outputs.date }}/g')"
       - name: Bump Version
         run: |
           git config user.name "GitHub Actions Bot"
