--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -2,7 +2,7 @@ name: Daily Release
 
 on:  
   schedule:
-    - cron: '27 * * * *'
+    - cron: '0 0 * * *'
 jobs:
   Trigger-Package-and-Release-Workflow:
     runs-on: ubuntu-latest
